--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:05:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:06:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -199,41 +199,25 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
 -2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -11
--2 thru 9</td>
-      <td>Rory McIlroy -6
--7 thru 14</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -245,7 +229,7 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland(W) +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
@@ -284,35 +268,35 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -11
+-2 thru 9</td>
+      <td>Rory McIlroy -6
+-7 thru 14</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -11
 -2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-14</td>
-      <td>Cameron Smith -7
--1 thru 9</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Will Zalatoris -3
--5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -332,35 +316,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-12</td>
-      <td>Rory McIlroy -6
--7 thru 14</td>
-      <td>Will Zalatoris -3
--5 thru 16</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 16</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-12</td>
       <td>Cameron Smith -7
 -1 thru 9</td>
-      <td>Rory McIlroy(W) -6
--7 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Hideki Matsuyama +2
-E thru 17</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Will Zalatoris -3
+-5 thru 16</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -371,7 +339,7 @@ Missed Cut</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -396,20 +364,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-10</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
-      <td>Corey Conners E
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
+      <td>Collin Morikawa -2
+-3 thru 14</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-1 thru 17</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -428,6 +396,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -7
+-1 thru 9</td>
+      <td>Rory McIlroy(W) -6
+-7 thru 14</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Hideki Matsuyama +2
+E thru 17</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-9</td>
       <td>Rory McIlroy -6
@@ -439,24 +423,8 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -7
--1 thru 9</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -485,11 +453,27 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-8</td>
+      <td>Rory McIlroy -6
+-7 thru 14</td>
+      <td>Will Zalatoris -3
+-5 thru 16</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -501,27 +485,11 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Hideki Matsuyama +2
 E thru 17</td>
       <td class="greyout">Jon Rahm +4
 -3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-7</td>
-      <td>Rory McIlroy -6
--7 thru 14</td>
-      <td>Collin Morikawa(W) -2
--3 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -531,12 +499,28 @@ Missed Cut</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Bubba Watson +7
 -1 (F)</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -7
+-1 thru 9</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -556,38 +540,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -7
--1 thru 9</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Corey Conners E
-+1 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -7
--1 thru 9</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Corey Conners E
-+1 thru 12</td>
-      <td>Hideki Matsuyama +2
-E thru 17</td>
-      <td class="greyout leftborder">Marc Leishman +6
-+3 thru 17</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -11
@@ -595,12 +547,28 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 (F)</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-5</td>
+      <td>Rory McIlroy -6
+-7 thru 14</td>
+      <td>Collin Morikawa(W) -2
+-3 thru 14</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 17</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -620,35 +588,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith -7
+      <td>Cameron Smith(W) -7
 -1 thru 9</td>
-      <td>Will Zalatoris -3
--5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">-3</td>
-      <td>Rory McIlroy -6
--7 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -7
+-1 thru 9</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Hideki Matsuyama +2
+E thru 17</td>
+      <td class="greyout leftborder">Marc Leishman +6
++3 thru 17</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -668,6 +636,38 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -7
+-1 thru 9</td>
+      <td>Will Zalatoris -3
+-5 thru 16</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-1</td>
+      <td>Rory McIlroy -6
+-7 thru 14</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">0</td>
       <td>Rory McIlroy(W) -6
@@ -675,7 +675,7 @@ Missed Cut</td>
       <td>Dustin Johnson E
 -1 thru 15</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -691,7 +691,7 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
       <td>Viktor Hovland(W) +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -701,13 +701,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">4</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Sam Burns
@@ -717,34 +717,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">4</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
-      <td>Justin Thomas -1
-E thru 11</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">4</td>
-      <td>Rory McIlroy -6
--7 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay(W) +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -787,12 +771,28 @@ Missed Cut</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Joaquin Niemann +6
 +2 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">6</td>
+      <td>Rory McIlroy -6
+-7 thru 14</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay(W) +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -817,7 +817,7 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
       <td>Viktor Hovland(W) +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +6
@@ -861,11 +861,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -877,9 +877,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-E thru 11</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Hideki Matsuyama +2
 E thru 17</td>
       <td>Jon Rahm(W) +4
@@ -897,7 +897,7 @@ Missed Cut</td>
       <td>Dustin Johnson E
 -1 thru 15</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
