--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:05:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:06:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
 -2 thru 9</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-12</td>
       <td>Cameron Smith -7
 -1 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -189,15 +189,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-10</td>
       <td>Cameron Smith -7
 -1 thru 9</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +2 thru 13</td>
       <td class="greyout">Joaquin Niemann +6
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -7
 -1 thru 9</td>
-      <td>Justin Thomas -1
-E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -237,15 +237,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -3
 +1 thru 10</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
-      <td>Justin Thomas -1
-E thru 11</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Viktor Hovland(W) +2
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">2</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -269,13 +269,13 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">2</td>
       <td>Will Zalatoris -3
 -5 thru 16</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
-      <td>Justin Thomas(W) -1
-E thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas -1
-E thru 11</td>
+      <td class="bigbold">8</td>
       <td>Dustin Johnson E
 -1 thru 15</td>
       <td>Corey Conners E
 +1 thru 12</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -321,7 +321,7 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
       <td>Viktor Hovland(W) +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +6
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Dustin Johnson E
 -1 thru 15</td>
       <td>Viktor Hovland +2
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -379,8 +379,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">Adam Ryan</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Corey Conners</td>
+      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Jon Rahm</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
