--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:09:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:10:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,9 +173,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith -7
--1 thru 9</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -6
+E thru 10</td>
       <td>Shane Lowry -3
 -1 thru 11</td>
       <td>Will Zalatoris -3
@@ -189,9 +189,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -7
--1 thru 9</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -6
+E thru 10</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
       <td>Justin Thomas +1
@@ -205,9 +205,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -7
--1 thru 9</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+E thru 10</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
       <td>Collin Morikawa -2
@@ -221,9 +221,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -7
--1 thru 9</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -6
+E thru 10</td>
       <td>Corey Conners E
 +1 thru 13</td>
       <td>Justin Thomas +1
