--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:12:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:13:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -196,22 +196,22 @@ E thru 10</td>
 -7 thru 15</td>
       <td>Justin Thomas +1
 +2 thru 12</td>
-      <td>Viktor Hovland +2
+      <td>Tommy Fleetwood(W) +2
++1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 -1 thru 17</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+2 thru 13</td>
       <td class="greyout">Joaquin Niemann +6
 +2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -6
 E thru 10</td>
       <td>Rory McIlroy -6
 -7 thru 15</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -237,9 +237,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
       <td>Sungjae Im -2
 +2 thru 11</td>
       <td>Justin Thomas +1
@@ -248,6 +248,22 @@ Missed Cut</td>
 -1 thru 17</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
+      <td>Will Zalatoris -3
+-5 thru 17</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Tony Finau +6
++2 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -268,26 +284,10 @@ Missed Cut</td>
 +8 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -3
--5 thru 17</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
-      <td>Justin Thomas(W) +1
-+2 thru 12</td>
-      <td>Tony Finau +6
-+2 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
       <td>Corey Conners(W) E
 +1 thru 13</td>
       <td>Robert MacIntyre +3
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
+      <td class="bigbold">9</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
       <td>Viktor Hovland(W) +2
 -1 thru 17</td>
       <td>Jon Rahm +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa -2
--3 thru 14</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tony Finau +6
