--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:20:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:20:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -10
--1 thru 10</td>
-      <td>Cameron Smith(W) -6
-E thru 10</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -10
@@ -198,8 +182,8 @@ E thru 10</td>
 -5 thru 17</td>
       <td>Corey Conners E
 +1 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -220,6 +204,22 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -10
+-1 thru 10</td>
+      <td>Cameron Smith(W) -6
+E thru 10</td>
+      <td>Shane Lowry -3
+-1 thru 11</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-15</td>
       <td>Scottie Scheffler(W) -10
@@ -234,22 +234,6 @@ Missed Cut</td>
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -10
--1 thru 10</td>
-      <td>Cameron Smith -6
-E thru 10</td>
-      <td>Corey Conners E
-+1 thru 13</td>
-      <td>Viktor Hovland(W) +2
--1 thru 17</td>
-      <td class="greyout leftborder">Tyrrell Hatton +17
-+8 (F)</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -268,19 +252,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler -10
 -1 thru 10</td>
-      <td>Rory McIlroy -6
--7 thru 15</td>
-      <td>Justin Thomas(W) +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td>Cameron Smith -6
+E thru 10</td>
+      <td>Corey Conners E
++1 thru 13</td>
+      <td>Viktor Hovland(W) +4
++1 (F)</td>
+      <td class="greyout leftborder">Tyrrell Hatton +17
++8 (F)</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -297,6 +281,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler -10
+-1 thru 10</td>
+      <td>Rory McIlroy -6
+-7 thru 15</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -326,8 +326,8 @@ Missed Cut</td>
 -5 thru 17</td>
       <td>Justin Thomas +1
 +2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 (F)</td>
       <td class="greyout">Tiger Woods(W) +13
 +6 (F)</td>
     </tr>
@@ -358,25 +358,9 @@ Missed Cut</td>
 -5 thru 17</td>
       <td>Corey Conners E
 +1 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler -10
--1 thru 10</td>
-      <td>Rory McIlroy -6
--7 thru 15</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -444,20 +428,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -6
-E thru 10</td>
-      <td>Will Zalatoris -3
--5 thru 17</td>
-      <td>Corey Conners E
-+1 thru 13</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -10
+-1 thru 10</td>
+      <td>Rory McIlroy -6
+-7 thru 15</td>
+      <td>Jon Rahm(W) +4
 -3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -468,10 +452,10 @@ E thru 10</td>
 -1 thru 11</td>
       <td>Corey Conners E
 +1 thru 13</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
+      <td>Hideki Matsuyama +2
 E thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 (F)</td>
       <td class="greyout">Jon Rahm +4
 -3 (F)</td>
     </tr>
@@ -492,52 +476,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-6</td>
-      <td>Rory McIlroy -6
--7 thru 15</td>
-      <td>Collin Morikawa(W) -3
--4 thru 15</td>
-      <td>Justin Thomas +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-6</td>
-      <td>Rory McIlroy -6
--7 thru 15</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 E thru 10</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
+      <td>Will Zalatoris -3
+-5 thru 17</td>
+      <td>Corey Conners E
++1 thru 13</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
-      <td class="greyout leftborder">Bubba Watson +7
+      <td class="greyout leftborder">Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
-E thru 10</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
-      <td>Justin Thomas(W) +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -556,35 +508,51 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -10
--1 thru 10</td>
-      <td>Corey Conners E
-+1 thru 13</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +7
--1 (F)</td>
-      <td class="greyout">Sam Burns
+      <td>Rory McIlroy -6
+-7 thru 15</td>
+      <td>Collin Morikawa(W) -3
+-4 thru 15</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -6
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-4</td>
+      <td>Rory McIlroy -6
+-7 thru 15</td>
+      <td>Cameron Smith -6
 E thru 10</td>
-      <td>Corey Conners E
-+1 thru 13</td>
-      <td>Justin Thomas +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Bubba Watson +7
+-1 (F)</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -6
+E thru 10</td>
+      <td>Shane Lowry -3
+-1 thru 11</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -620,6 +588,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -10
+-1 thru 10</td>
+      <td>Corey Conners E
++1 thru 13</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay(W) +7
+-1 (F)</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -6
@@ -633,6 +617,22 @@ E thru 17</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -6
+E thru 10</td>
+      <td>Corey Conners E
++1 thru 13</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -669,13 +669,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">2</td>
       <td>Collin Morikawa -3
 -4 thru 15</td>
       <td>Will Zalatoris -3
 -5 thru 17</td>
-      <td>Viktor Hovland(W) +2
--1 thru 17</td>
+      <td>Viktor Hovland(W) +4
++1 (F)</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -685,33 +685,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">2</td>
       <td>Rory McIlroy(W) -6
 -7 thru 15</td>
       <td>Dustin Johnson E
 -1 thru 16</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -3
--5 thru 17</td>
-      <td>Justin Thomas(W) +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -732,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -3
--5 thru 17</td>
-      <td>Justin Thomas +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">5</td>
       <td>Shane Lowry -3
@@ -764,19 +732,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">5</td>
-      <td>Shane Lowry(W) -3
--1 thru 11</td>
-      <td>Corey Conners E
-+1 thru 13</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Joaquin Niemann +6
-+2 (F)</td>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris -3
+-5 thru 17</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
-      <td class="greyout">Brian Harman
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris -3
+-5 thru 17</td>
+      <td>Justin Thomas +1
++2 thru 12</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -796,19 +780,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -3
--4 thru 15</td>
-      <td>Viktor Hovland(W) +2
--1 thru 17</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Reed +6
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">7</td>
+      <td>Shane Lowry(W) -3
+-1 thru 11</td>
+      <td>Corey Conners E
++1 thru 13</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td>Joaquin Niemann +6
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
+      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,6 +828,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa -3
+-4 thru 15</td>
+      <td>Viktor Hovland(W) +4
++1 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Reed +6
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">13</td>
       <td>Scottie Scheffler -10
@@ -856,22 +856,6 @@ Missed Cut</td>
 +2 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -908,12 +892,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">16</td>
+      <td>Justin Thomas(W) +1
++2 thru 12</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">17</td>
       <td>Dustin Johnson E
 -1 thru 16</td>
-      <td>Viktor Hovland +2
--1 thru 17</td>
+      <td>Viktor Hovland +4
++1 (F)</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -927,8 +927,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Tony Muir</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm(W)</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -1005,8 +1005,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Chris Bryson</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm(W)</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
