--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:20:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:21:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -1 thru 10</td>
       <td>Will Zalatoris -3
 -5 thru 17</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
+      <td>Shane Lowry -2
+E thru 12</td>
       <td>Justin Thomas(W) +1
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -157,13 +157,13 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 10</td>
       <td>Will Zalatoris -3
 -5 thru 17</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
+      <td>Shane Lowry -2
+E thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Cameron Smith -6
 E thru 10</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
       <td>Will Zalatoris -3
 -5 thru 17</td>
+      <td>Shane Lowry -2
+E thru 12</td>
       <td>Justin Thomas(W) +1
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -195,7 +195,7 @@ E thru 10</td>
       <td>Rory McIlroy -6
 -7 thru 15</td>
       <td>Justin Thomas +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Tommy Fleetwood(W) +2
 +1 thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -221,13 +221,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -6
 E thru 10</td>
-      <td>Corey Conners E
-+1 thru 13</td>
+      <td>Corey Conners -1
+E thru 14</td>
       <td>Justin Thomas +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -243,7 +243,7 @@ Missed Cut</td>
       <td>Sungjae Im -1
 +3 thru 12</td>
       <td>Justin Thomas +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Viktor Hovland(W) +4
 +1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -259,7 +259,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 thru 17</td>
       <td>Justin Thomas(W) +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -270,12 +270,12 @@ Missed Cut</td>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">2</td>
-      <td>Shane Lowry -3
--1 thru 11</td>
-      <td>Corey Conners E
-+1 thru 13</td>
+      <td>Shane Lowry -2
+E thru 12</td>
+      <td>Corey Conners -1
+E thru 14</td>
       <td>Justin Thomas(W) +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -3
 -4 thru 15</td>
-      <td>Corey Conners(W) E
-+1 thru 13</td>
+      <td>Corey Conners(W) -1
+E thru 14</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
+      <td>Corey Conners -1
+E thru 14</td>
       <td>Dustin Johnson E
 -1 thru 16</td>
-      <td>Corey Conners E
-+1 thru 13</td>
       <td>Justin Thomas +1
-+2 thru 12</td>
++2 thru 13</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
