--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:32:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:33:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,9 +173,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith -7
--1 thru 11</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -4
++2 thru 12</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Shane Lowry -2
@@ -189,11 +189,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -7
--1 thru 11</td>
+      <td class="bigbold">-8</td>
       <td>Rory McIlroy -6
 -7 thru 16</td>
+      <td>Cameron Smith -4
++2 thru 12</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Tommy Fleetwood(W) +2
@@ -205,11 +205,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -7
--1 thru 11</td>
+      <td class="bigbold">-6</td>
       <td>Rory McIlroy -6
 -7 thru 16</td>
+      <td>Cameron Smith(W) -4
++2 thru 12</td>
       <td>Collin Morikawa -3
 -4 thru 16</td>
       <td>Patrick Cantlay +7
@@ -221,9 +221,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -7
--1 thru 11</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -4
++2 thru 12</td>
       <td>Corey Conners -1
 E thru 14</td>
       <td>Justin Thomas E
