--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:35:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:36:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ body {
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td class="greyout leftborder">Russell Henley +5
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -195,7 +195,7 @@ Missed Cut</td>
       <td>Rory McIlroy -6
 -7 thru 17</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -213,7 +213,7 @@ E thru 14</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
@@ -227,7 +227,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 -1 thru 13</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -243,7 +243,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Talor Gooch +2
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -291,7 +291,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -323,7 +323,7 @@ Missed Cut</td>
       <td>Cameron Smith -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Viktor Hovland(W) +4
 +1 (F)</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
@@ -341,7 +341,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
@@ -355,7 +355,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Webb Simpson +6
@@ -387,7 +387,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -412,22 +412,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -4
-+2 thru 12</td>
-      <td>Shane Lowry -3
--1 thru 13</td>
-      <td>Corey Conners -1
-E thru 14</td>
-      <td>Dustin Johnson(W) E
--1 thru 17</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-8</td>
       <td>Rory McIlroy(W) -6
@@ -444,6 +428,22 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -4
++2 thru 12</td>
+      <td>Shane Lowry -3
+-1 thru 13</td>
+      <td>Corey Conners -1
+E thru 15</td>
+      <td>Dustin Johnson(W) +1
+E (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -451,7 +451,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 -1 thru 13</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Hideki Matsuyama +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -499,7 +499,7 @@ Missed Cut</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -515,7 +515,7 @@ E thru 14</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Corey Conners(W) -1
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -529,7 +529,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -10
 -1 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
@@ -545,7 +545,7 @@ Missed Cut</td>
       <td>Rory McIlroy -6
 -7 thru 17</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Jon Rahm(W) +4
@@ -561,7 +561,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Hideki Matsuyama +2
@@ -609,7 +609,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Viktor Hovland +4
@@ -641,7 +641,7 @@ Missed Cut</td>
       <td>Cameron Smith -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Talor Gooch +2
 -1 (F)</td>
       <td>Hideki Matsuyama +2
@@ -685,11 +685,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Rory McIlroy(W) -6
 -7 thru 17</td>
-      <td>Dustin Johnson E
--1 thru 17</td>
+      <td>Dustin Johnson +1
+E (F)</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
@@ -705,7 +705,7 @@ Missed Cut</td>
       <td>Collin Morikawa -3
 -4 thru 17</td>
       <td>Corey Conners(W) -1
-E thru 14</td>
+E thru 15</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -765,11 +765,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Shane Lowry -3
 -1 thru 13</td>
-      <td>Dustin Johnson(W) E
--1 thru 17</td>
+      <td>Dustin Johnson(W) +1
+E (F)</td>
       <td>Matthew Fitzpatrick +2
 -2 (F)</td>
       <td>Tony Finau +6
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Shane Lowry(W) -3
 -1 thru 13</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Joaquin Niemann +6
@@ -833,28 +833,12 @@ Missed Cut</td>
       <td>Cameron Smith -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tiger Woods +13
 +6 (F)</td>
       <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">13</td>
-      <td>Scottie Scheffler -10
--1 thru 12</td>
-      <td>Dustin Johnson E
--1 thru 17</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td>Adam Scott +14
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -873,6 +857,22 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">14</td>
+      <td>Scottie Scheffler -10
+-1 thru 12</td>
+      <td>Dustin Johnson +1
+E (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td>Adam Scott +14
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Dustin Johnson E
--1 thru 17</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson +1
+E (F)</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
