--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:35:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:36:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,12 +220,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Collin Morikawa -3
+-4 thru 17</td>
+      <td>Sungjae Im -2
++2 thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Viktor Hovland(W) +4
++1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -4
 +2 thru 12</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Viktor Hovland +4
@@ -241,7 +257,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 -1 thru 13</td>
       <td>Corey Conners -1
-E thru 14</td>
+E thru 15</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
       <td>Jon Rahm +4
@@ -250,22 +266,6 @@ E thru 14</td>
 -1 (F)</td>
       <td class="greyout">Tyrrell Hatton +17
 +8 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa -3
--4 thru 17</td>
-      <td>Sungjae Im -1
-+3 thru 12</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Viktor Hovland(W) +4
-+1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Collin Morikawa -3
 -4 thru 17</td>
       <td>Corey Conners(W) -1
-E thru 14</td>
+E thru 15</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -1
-E thru 14</td>
-      <td>Dustin Johnson E
--1 thru 17</td>
+E thru 15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
+      <td>Dustin Johnson +1
+E (F)</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Dustin Johnson E
--1 thru 17</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson +1
+E (F)</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td>Jon Rahm +4
