--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:58:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:59:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
 -1 thru 13</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
       <td>Shane Lowry -3
 -1 thru 14</td>
-      <td>Justin Thomas(W) -1
-E thru 15</td>
+      <td>Justin Thomas(W) -2
+-1 thru 16</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Cameron Smith -4
 +2 thru 13</td>
       <td>Shane Lowry -3
 -1 thru 14</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas(W) -1
-E thru 15</td>
+      <td>Justin Thomas(W) -2
+-1 thru 16</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -189,13 +189,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Rory McIlroy -7
 -8 (F)</td>
       <td>Cameron Smith -4
 +2 thru 13</td>
-      <td>Justin Thomas -1
-E thru 15</td>
+      <td>Justin Thomas -2
+-1 thru 16</td>
       <td>Tommy Fleetwood(W) +2
 +1 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -221,13 +221,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Collin Morikawa -4
 -5 (F)</td>
       <td>Sungjae Im -3
 +1 thru 14</td>
-      <td>Justin Thomas -1
-E thru 15</td>
+      <td>Justin Thomas -2
+-1 thru 16</td>
       <td>Viktor Hovland(W) +4
 +1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
 +2 thru 13</td>
       <td>Corey Conners -2
 -1 thru 17</td>
-      <td>Justin Thomas -1
-E thru 15</td>
+      <td>Justin Thomas -2
+-1 thru 16</td>
       <td>Viktor Hovland +4
 +1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Shane Lowry -3
 -1 thru 14</td>
+      <td>Justin Thomas(W) -2
+-1 thru 16</td>
       <td>Corey Conners -2
 -1 thru 17</td>
-      <td>Justin Thomas(W) -1
-E thru 15</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -269,13 +269,13 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Collin Morikawa -4
 -5 (F)</td>
       <td>Will Zalatoris -3
 -5 (F)</td>
-      <td>Justin Thomas(W) -1
-E thru 15</td>
+      <td>Justin Thomas(W) -2
+-1 thru 16</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -2
+-1 thru 16</td>
       <td>Corey Conners -2
 -1 thru 17</td>
-      <td>Justin Thomas -1
-E thru 15</td>
       <td>Dustin Johnson +1
 E (F)</td>
       <td>Russell Henley +5
@@ -379,8 +379,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">Adam Ryan</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Corey Conners</td>
       <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Corey Conners</td>
       <td class="greyout">Jon Rahm</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
